@@ -80,7 +80,7 @@ argument ::= ('structure') expression
                 </pre>
                 
                 <p>
-                    Calling an error-handling script:
+                    Calling an error-handling script (it returns html code):
                 </p>
                 
                 <pre class="brush: html">
