@@ -49,3 +49,49 @@ QUnit.test( "After on-error tag test", function( assert ) {
 
     assert.equal( $('#t3-1').text() , "false" );
 });
+
+QUnit.test( "on-error object tag test", function( assert ) {
+    
+    dictionary.treatError = function( error ){
+        return error.type + '/' + error.value + '/' + error.traceback.substring( 0, 50 );
+    };
+    
+    zpt.run({
+        root: $( '#group4' )[0],
+        dictionary: dictionary
+    });
+
+    //assert.equal( $('#t4-1').text() , "true" );
+    assert.equal( $('#t4-2').text() , "1" );
+    assert.equal( $('#t4-3').text() , "TypeError/Cannot set property 'innerHTML' of null/TypeError: Cannot set property 'innerHTML' of null" );
+    assert.equal( $('#t4-4').text() , "yes" );
+    assert.equal( $('#t4-5').text() , "Infinity" );
+});
+
+QUnit.test( "on-error nothing test", function( assert ) {
+
+    zpt.run({
+        root: $( '#group5' )[0],
+        dictionary: dictionary
+    });
+
+    assert.equal( $('#t5-1').text() , "" );
+});
+
+QUnit.test( "on-error literal structure test", function( assert ) {
+    
+    zpt.run({
+        root: $( '#group6' )[0],
+        dictionary: dictionary
+    });
+
+    assert.equal( $('#t6-1').html() , "&lt;strong&gt;Oh, noooo!&lt;/strong&gt;" );
+    
+    zpt.run({
+        root: $( '#group7' )[0],
+        dictionary: dictionary
+    });
+
+    assert.equal( $('#t7-1').html() , "<strong>Oh, noooo!</strong>" );
+});
+
